# quern

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ledger-gate.yml
ledger/: __init__.py  check.py  roll.json  tree.py
src/bom/: __init__.py  app.html  app_host.py  cli.py  geometry.py  geometry_host.py  grounding.py  host.py  ledger.py  library.py  provenance.py  scene.py  solver.py  standard.py  store.py  tree.py
src/quern/: __init__.py  app.html  app_host.py  boundary.py  brief.py  cli.py  grounding.py  host.py  library.py  navigate.py  replay.py  roll.py  solver.py  store.py  tree.py
tests/: test_app.py  test_artifacts.py  test_brief.py  test_channel.py  test_commit.py  test_counter_examples.py  test_flight.py  test_grounding.py  test_ledger.py  test_library.py  test_native_solve.py  test_own_ledger.py  test_predicates.py  test_roll.py  test_semantics.py  test_solid_render.py  test_store.py  test_traces.py  test_unsupported.py  test_uses.py  test_write_reports.py
