[project]
name = "quern"
version = "0.1.0"
description = "quern: a generic node tree whose semantics (vocabulary, rules, solvers) are data, registered at runtime and versioned as packages; private while it hardens, built to be open-sourced"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "wasmtime>=25",  # sandboxed solver runtime: fuel-metered, no ambient authority
]

[project.optional-dependencies]
# quern.host registers the tree_* MCP tools over a Workspace; only a server needs it.
# (The geometry extra is gone with the geometry module: shapes are a domain package now,
# and a shape-carrying host installs that package instead.)
host = ["mcp[cli]>=1.2"]

[project.scripts]
quern = "quern.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quern"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
# `ledger/` is quern's own design ledger — a design-time artifact at the repo root, kept out
# of the shipped package (packages = ["src/quern"]). It is not installed, so put the root on
# the path or the suite cannot see it.
pythonpath = ["."]
